--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@inrupt/vocab-solid": "^1.0.4",
     "axios": "^1.5.1",
     "cors": "^2.8.5",
+    "openid-client": "^5.6.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.16.0"
