--- a/package.json
+++ b/package.json
@@ -27,8 +27,9 @@
     "oidc-token-hash": "^5.0.3",
     "openid-client": "^5.6.1",
     "react": "^18.2.0",
+    "react-datepicker": "^6.1.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.16.0"
+    "react-router-dom": "^6.22.1"
   },
   "devDependencies": {
     "@babel/core": "^7.23.0",
