--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "dependencies": {
     "@babel/preset-react": "^7.22.15",
+    "@huggingface/inference": "^2.6.4",
     "@inrupt/solid-client": "^1.30.2",
     "@inrupt/solid-client-authn-browser": "^1.17.2",
     "@inrupt/solid-client-authn-node": "^1.17.3",
@@ -22,25 +23,37 @@
     "@inrupt/vocab-common-rdf": "^1.0.5",
     "@inrupt/vocab-solid": "^1.0.4",
     "axios": "^1.5.1",
+    "bootstrap": "^5.3.2",
+    "bs-brain": "^2.0.3",
     "cors": "^2.8.5",
+    "loader-utils": "^3.2.1",
     "oidc-token-hash": "^5.0.3",
     "openid-client": "^5.6.1",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.10.1",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.16.0"
+    "react-router-dom": "^6.16.0",
+    "react-scripts": "^5.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.23.0",
     "@babel/preset-env": "^7.22.20",
+    "@babel/runtime": "^7.13.8",
     "@inrupt/artifact-generator": "^3.1.1",
     "@types/react": "^18.2.33",
+    "babel-eslint": "^10.1.0",
     "babel-loader": "^9.1.3",
     "concurrently": "^8.2.2",
     "css-loader": "^6.8.1",
     "dotenv": "^16.3.1",
+    "eslint": "^7.2.0",
+    "eslint-plugin-react": "^7.20.6",
+    "eslint-plugin-react-hooks": "^4.0.0",
+    "eslint-plugin-react-refresh": "^0.4.4",
     "html-webpack-plugin": "^5.5.3",
     "style-loader": "^3.3.3",
     "ts-loader": "^9.5.0",
+    "typescript": "^4.1.3",
     "webpack": "^5.88.2",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^4.15.1"
