--- a/package.json
+++ b/package.json
@@ -1,59 +1,50 @@
 {
-  "name": "wellnesspod",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.tsx",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack",
-    "start-frontend": "npm run build && webpack serve --open",
-    "start-backend": "node src/server.mjs",
-    "start": "concurrently \"npm run start-frontend\" \"npm run start-backend\""
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "name": "calorie_tracker_final",
+  "version": "0.1.0",
+  "private": true,
   "dependencies": {
-    "@babel/preset-react": "^7.22.15",
-    "@huggingface/inference": "^2.6.4",
-    "@inrupt/solid-client": "^1.30.2",
-    "@inrupt/solid-client-authn-browser": "^1.17.2",
-    "@inrupt/solid-client-authn-node": "^1.17.3",
-    "@inrupt/solid-ui-react": "^2.9.0",
-    "@inrupt/vocab-common-rdf": "^1.0.5",
-    "@inrupt/vocab-solid": "^1.0.4",
-    "axios": "^1.5.1",
-    "cors": "^2.8.5",
-    "loader-utils": "^3.2.1",
-    "oidc-token-hash": "^5.0.3",
-    "openid-client": "^5.6.1",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^13.5.0",
+    "@types/jest": "^29.5.0",
+    "@types/node": "^16.11.14",
+    "@types/react": "^18.0.28",
+    "@types/react-dom": "^18.0.11",
     "react": "^18.2.0",
-    "react-bootstrap": "^2.10.1",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.16.0",
-    "react-scripts": "^5.0.1",
-    "url-loader": "^4.1.1",
-    "moment": "^2.30.1"
+    "react-scripts": "5.0.1",
+    "web-vitals": "^2.1.4",
+    "@mui/material": "^5.13.4",
+    "@emotion/react": "^11.11.0",
+    "@emotion/styled": "^11.11.0",
+    "@mui/x-date-pickers": "^6.7.0",
+    "date-fns": "^2.30.0",
+    "react-router-dom": "^6.2.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.23.0",
-    "@babel/preset-env": "^7.22.20",
-    "@babel/runtime": "^7.13.8",
-    "@inrupt/artifact-generator": "^3.1.1",
-    "@types/react": "^18.2.33",
-    "babel-eslint": "^10.1.0",
-    "babel-loader": "^9.1.3",
-    "concurrently": "^8.2.2",
-    "css-loader": "^6.8.1",
-    "dotenv": "^16.3.1",
-    "eslint-plugin-react": "^7.20.6",
-    "eslint-plugin-react-hooks": "^4.0.0",
-    "eslint-plugin-react-refresh": "^0.4.4",
-    "html-webpack-plugin": "^5.5.3",
-    "style-loader": "^3.3.3",
-    "ts-loader": "^9.5.0",
-    "webpack": "^5.90.3",
-    "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^4.15.1"
+    "autoprefixer": "^10.4.8",
+    "postcss": "^8.4.16",
+    "tailwindcss": "^3.1.8"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
+  "eslintConfig": {
+    "root": true
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
