--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "axios": "^1.5.1",
     "cors": "^2.8.5",
     "loader-utils": "^3.2.1",
+    "moment": "^2.30.1",
     "oidc-token-hash": "^5.0.3",
     "openid-client": "^5.6.1",
     "react": "^18.2.0",
@@ -32,8 +33,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.16.0",
     "react-scripts": "^5.0.1",
-    "url-loader": "^4.1.1",
-    "moment": "^2.30.1"
+    "url-loader": "^4.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.23.0",
@@ -49,7 +49,7 @@
     "eslint-plugin-react": "^7.20.6",
     "eslint-plugin-react-hooks": "^4.0.0",
     "eslint-plugin-react-refresh": "^0.4.4",
-    "html-webpack-plugin": "^5.5.3",
+    "html-webpack-plugin": "^5.6.0",
     "style-loader": "^3.3.3",
     "ts-loader": "^9.5.0",
     "webpack": "^5.90.3",
