--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "@inrupt/vocab-common-rdf": "^1.0.5",
     "@inrupt/vocab-solid": "^1.0.4",
     "axios": "^1.5.1",
+    "bootstrap": "^5.3.3",
     "cors": "^2.8.5",
     "loader-utils": "^3.2.1",
+    "moment": "^2.30.1",
     "oidc-token-hash": "^5.0.3",
     "openid-client": "^5.6.1",
     "react": "^18.2.0",
@@ -32,15 +34,14 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.16.0",
     "react-scripts": "^5.0.1",
-    "url-loader": "^4.1.1",
-    "moment": "^2.30.1"
+    "url-loader": "^4.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.23.0",
     "@babel/preset-env": "^7.22.20",
     "@babel/runtime": "^7.13.8",
     "@inrupt/artifact-generator": "^3.1.1",
-    "@types/react": "^18.2.33",
+    "@types/react": "^18.2.72",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^9.1.3",
     "concurrently": "^8.2.2",
