--- a/package.json
+++ b/package.json
@@ -1,66 +1,67 @@
 {
-  "name": "wellnesspod",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.tsx",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack",
-    "start-frontend": "npm run build && webpack serve --open",
-    "start-backend": "node src/server.mjs",
-    "start": "concurrently \"npm run start-frontend\" \"npm run start-backend\""
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "@babel/preset-react": "^7.22.15",
-    "@fortawesome/fontawesome-svg-core": "^6.5.1",
-    "@fortawesome/free-brands-svg-icons": "^6.5.1",
-    "@fortawesome/free-regular-svg-icons": "^6.5.1",
-    "@fortawesome/free-solid-svg-icons": "^6.5.1",
-    "@fortawesome/react-fontawesome": "^0.2.0",
-    "@huggingface/inference": "^2.6.4",
-    "@inrupt/solid-client": "^1.30.2",
-    "@inrupt/solid-client-authn-browser": "^1.17.2",
-    "@inrupt/solid-client-authn-node": "^1.17.3",
-    "@inrupt/solid-ui-react": "^2.9.0",
-    "@inrupt/vocab-common-rdf": "^1.0.5",
-    "@inrupt/vocab-solid": "^1.0.4",
-    "axios": "^1.5.1",
-    "cors": "^2.8.5",
-    "loader-utils": "^3.2.1",
-    "moment": "^2.30.1",
-    "oidc-token-hash": "^5.0.3",
-    "openid-client": "^5.6.1",
-    "react": "^18.2.0",
-    "react-bootstrap": "^2.10.1",
-    "react-date-picker": "^10.6.0",
-    "react-datepicker": "^6.6.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.16.0",
-    "react-scripts": "^3.0.1",
-    "url-loader": "^4.1.1"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.23.0",
-    "@babel/preset-env": "^7.22.20",
-    "@babel/runtime": "^7.13.8",
-    "@inrupt/artifact-generator": "^3.1.1",
-    "@types/react": "^18.2.33",
-    "babel-eslint": "^10.1.0",
-    "babel-loader": "^9.1.3",
-    "concurrently": "^8.2.2",
-    "css-loader": "^6.8.1",
-    "dotenv": "^16.3.1",
-    "eslint-plugin-react": "^7.20.6",
-    "eslint-plugin-react-hooks": "^4.0.0",
-    "eslint-plugin-react-refresh": "^0.4.4",
-    "html-webpack-plugin": "^5.6.0",
-    "style-loader": "^3.3.3",
-    "ts-loader": "^9.5.0",
-    "webpack": "^5.90.3",
-    "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^4.15.1"
-  }
+    "name": "wellnesspod",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.tsx",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "build": "webpack",
+        "start-frontend": "npm run build && webpack serve --open",
+        "start-backend": "node src/server.mjs",
+        "start": "concurrently \"npm run start-frontend\" \"npm run start-backend\""
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "dependencies": {
+        "@babel/preset-react": "^7.22.15",
+        "@fortawesome/fontawesome-svg-core": "^6.5.1",
+        "@fortawesome/free-brands-svg-icons": "^6.5.1",
+        "@fortawesome/free-regular-svg-icons": "^6.5.1",
+        "@fortawesome/free-solid-svg-icons": "^6.5.1",
+        "@fortawesome/react-fontawesome": "^0.2.0",
+        "@huggingface/inference": "^2.6.4",
+        "@inrupt/solid-client": "^1.30.2",
+        "@inrupt/solid-client-authn-browser": "^1.17.2",
+        "@inrupt/solid-client-authn-node": "^1.17.3",
+        "@inrupt/solid-ui-react": "^2.9.0",
+        "@inrupt/vocab-common-rdf": "^1.0.5",
+        "@inrupt/vocab-solid": "^1.0.4",
+        "axios": "^1.5.1",
+        "bootstrap": "^5.3.3",
+        "cors": "^2.8.5",
+        "loader-utils": "^3.2.1",
+        "moment": "^2.30.1",
+        "oidc-token-hash": "^5.0.3",
+        "openid-client": "^5.6.1",
+        "react": "^18.2.0",
+        "react-bootstrap": "^2.10.1",
+        "react-date-picker": "^10.6.0",
+        "react-datepicker": "^6.6.0",
+        "react-dom": "^18.2.0",
+        "react-router-dom": "^6.16.0",
+        "react-scripts": "^3.0.1",
+        "url-loader": "^4.1.1"
+    },
+    "devDependencies": {
+        "@babel/core": "^7.23.0",
+        "@babel/preset-env": "^7.22.20",
+        "@babel/runtime": "^7.13.8",
+        "@inrupt/artifact-generator": "^3.1.1",
+        "@types/react": "^18.2.72",
+        "babel-eslint": "^10.1.0",
+        "babel-loader": "^9.1.3",
+        "concurrently": "^8.2.2",
+        "css-loader": "^6.8.1",
+        "dotenv": "^16.3.1",
+        "eslint-plugin-react": "^7.20.6",
+        "eslint-plugin-react-hooks": "^4.0.0",
+        "eslint-plugin-react-refresh": "^0.4.4",
+        "html-webpack-plugin": "^5.6.0",
+        "style-loader": "^3.3.3",
+        "ts-loader": "^9.5.0",
+        "webpack": "^5.90.3",
+        "webpack-cli": "^5.1.4",
+        "webpack-dev-server": "^4.15.1"
+    }
 }
