--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
         "react-router-dom": "^6.16.0",
         "react-scripts": "^5.0.1",
         "url-loader": "^4.1.1",
-        "react-scripts": "5.0.1",
+        "react-scripts": "^3.0.1",
         "web-vitals": "^2.1.4",
         "@mui/material": "^5.13.4",
         "@emotion/react": "^11.11.0",
