--- a/package.json
+++ b/package.json
@@ -15,6 +15,11 @@
     "license": "ISC",
     "dependencies": {
         "@babel/preset-react": "^7.22.15",
+        "@fortawesome/fontawesome-svg-core": "^6.5.1",
+        "@fortawesome/free-brands-svg-icons": "^6.5.1",
+        "@fortawesome/free-regular-svg-icons": "^6.5.1",
+        "@fortawesome/free-solid-svg-icons": "^6.5.1",
+        "@fortawesome/react-fontawesome": "^0.2.0",    
         "@huggingface/inference": "^2.6.4",
         "@inrupt/solid-client": "^1.30.2",
         "@inrupt/solid-client-authn-browser": "^1.17.2",
