--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
         "openid-client": "^5.6.1",
         "react": "^18.2.0",
         "react-bootstrap": "^2.10.1",
+        "react-date-picker": "^10.6.0",
+        "react-datepicker": "^6.6.0",
         "react-dom": "^18.2.0",
         "react-router-dom": "^6.16.0",
         "react-scripts": "^5.0.1",
