--- a/package.json
+++ b/package.json
@@ -30,17 +30,20 @@
     "axios": "^1.5.1",
     "bootstrap": "^5.3.3",
     "cors": "^2.8.5",
+    "crypto-browserify": "^3.12.0",
     "loader-utils": "^3.2.1",
     "moment": "^2.30.1",
     "oidc-token-hash": "^5.0.3",
     "openid-client": "^5.6.1",
+    "os-browserify": "^0.3.0",
+    "path-browserify": "^1.0.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.1",
     "react-date-picker": "^10.6.0",
     "react-datepicker": "^6.6.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.16.0",
-    "react-scripts": "^3.0.1",
+    "react-scripts": "^5.0.1",
     "url-loader": "^4.1.1"
   },
   "devDependencies": {
@@ -53,7 +56,7 @@
     "babel-loader": "^9.1.3",
     "concurrently": "^8.2.2",
     "css-loader": "^6.8.1",
-    "dotenv": "^16.3.1",
+    "dotenv": "^16.4.5",
     "eslint-plugin-react": "^7.20.6",
     "eslint-plugin-react-hooks": "^4.0.0",
     "eslint-plugin-react-refresh": "^0.4.4",
