--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
         "@babel/preset-env": "^7.22.20",
         "@babel/runtime": "^7.13.8",
         "@inrupt/artifact-generator": "^3.1.1",
+        "@types/http-proxy": "^1.17.14",
         "@types/react": "^18.2.72",
         "babel-eslint": "^10.1.0",
         "babel-loader": "^9.1.3",
@@ -63,7 +64,7 @@
         "html-webpack-plugin": "^5.6.0",
         "style-loader": "^3.3.3",
         "ts-loader": "^9.5.0",
-        "webpack": "^5.90.3",
+        "webpack": "^5.91.0",
         "webpack-cli": "^5.1.4",
         "webpack-dev-server": "^4.15.1"
     }
