--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -1,6 +1,8 @@
 {
   "compilerOptions": {
     "jsx": "react",
+    "types": ["http-proxy"],
+
     "allowSyntheticDefaultImports": true,
     "esModuleInterop": true
   }
