--- a/package.json
+++ b/package.json
@@ -49,10 +49,11 @@
         "react-datepicker": "^6.6.0",
         "react-dom": "^18.2.0",
         "react-router-dom": "^6.2.1",
-        "react-scripts": "^3.0.1",
-        "typescript": "^5.4.5",
+        "react-scripts": "^5.0.1",
+        "@types/react": "^18.2.72",
         "url-loader": "^4.1.1",
-        "web-vitals": "^2.1.4"
+        "web-vitals": "^2.1.4",
+        "typescript": "^4.9.5"
     },
     "devDependencies": {
         "@babel/core": "^7.23.0",
