--- a/package.json
+++ b/package.json
@@ -32,11 +32,13 @@
         "@mui/material": "^5.13.4",
         "@mui/x-date-pickers": "^6.19.9",
         "@types/lodash": "^4.17.0",
+        "@types/react": "^18.2.72",
         "axios": "^1.5.1",
         "bootstrap": "^5.3.3",
         "cors": "^2.8.5",
         "crypto-browserify": "^3.12.0",
         "date-fns": "^2.30.0",
+        "express": "^4.19.2",
         "loader-utils": "^3.2.1",
         "moment": "^2.30.1",
         "oidc-token-hash": "^5.0.3",
@@ -49,11 +51,10 @@
         "react-datepicker": "^6.6.0",
         "react-dom": "^18.2.0",
         "react-router-dom": "^6.2.1",
-        "react-scripts": "^5.0.1",
-        "@types/react": "^18.2.72",
+        "react-scripts": "^3.0.1",
+        "typescript": "^4.9.5",
         "url-loader": "^4.1.1",
-        "web-vitals": "^2.1.4",
-        "typescript": "^4.9.5"
+        "web-vitals": "^2.1.4"
     },
     "devDependencies": {
         "@babel/core": "^7.23.0",
